--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -2,15 +2,15 @@
 {% if request.user.is_authenticated %}
 <ul class="sidenav">
   {% if request.path == "/" %}
-  <li><a class="active" href="{% url 'auth:account' %}">User Account</a></li>
+  <li><a class="active" href="{% url 'appauth:account' %}">User Account</a></li>
   {% else %}
-  <li><a href="{% url 'auth:account' %}">User Account</a></li>
+  <li><a href="{% url 'appauth:account' %}">User Account</a></li>
   {% endif %}
 
   {% if "profile" in request.path %}
-  <li><a class="active" href="{% url 'auth:profile' %}">User Profile</a></li>
+  <li><a class="active" href="{% url 'appauth:profile' %}">User Profile</a></li>
   {% else %}
-  <li><a href="{% url 'auth:profile' %}">User Profile</a></li>
+  <li><a href="{% url 'appauth:profile' %}">User Profile</a></li>
   {% endif %}
 
   {% if "route" in request.path %}
@@ -26,9 +26,9 @@
   {% endif %}
 
   {% if "sign-out" in request.path %}
-  <li><a class="active" href="{% url 'auth:sign-out' %}">Sign Out</a></li>
+  <li><a class="active" href="{% url 'appauth:sign-out' %}">Sign Out</a></li>
   {% else %}
-  <li><a href="{% url 'auth:sign-out' %}">Sign Out</a></li>
+  <li><a href="{% url 'appauth:sign-out' %}">Sign Out</a></li>
   {% endif %}
   
 </ul>
@@ -36,15 +36,15 @@
 <ul class="sidenav">
 
   {% if "sign-in" in request.path %}
-  <li><a class="active" href="{% url 'auth:sign-in' %}">Sign In</a></li>
+  <li><a class="active" href="{% url 'appauth:sign-in' %}">Sign In</a></li>
   {% else %}
-  <li><a href="{% url 'auth:sign-in' %}">Sign In</a></li>
+  <li><a href="{% url 'appauth:sign-in' %}">Sign In</a></li>
   {% endif %}
   
   {% if "sign-up" in request.path %}
-  <li><a class="active" href="{% url 'auth:sign-up' %}">Sign Up</a></li>
+  <li><a class="active" href="{% url 'appauth:sign-up' %}">Sign Up</a></li>
   {% else %}
-  <li><a href="{% url 'auth:sign-up' %}">Sign Up</a></li>
+  <li><a href="{% url 'appauth:sign-up' %}">Sign Up</a></li>
   {% endif %}
 </ul>
 {% endif %}
