--- a/templates/appauth/account.html
+++ b/templates/appauth/account.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<h3>Django Google API Course - User Account</h3>
+<h3>User Account</h3>
 
 <div class="container">
 
@@ -50,7 +50,7 @@
       {% else %}
         <tr>
           <td>User Profile</td>
-          <td><a href="{% url 'auth:profile' %}" >Create user Profile</a></td>
+          <td><a href="{% url 'appauth:profile' %}" >Create user Profile</a></td>
         </tr>
       {% endif %}
     </tbody>
